<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- LOGO -->
    <ImageButton
        android:id="@+id/imageButtonLogo"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bara" />

    <!-- TÍTULO -->

    <!-- ÁGUA -->

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:scaleType="fitCenter"
        android:text="@string/informa_paudalho"
        android:textColor="#1177C8"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageButtonLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/imageButtonLogo"
        app:layout_constraintTop_toTopOf="@id/imageButtonLogo"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/buttonAgua"
        android:layout_width="112dp"
        android:layout_height="98dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="112dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/botao_agua"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageButtonLogo"
        app:srcCompat="@drawable/agua" />

    <TextView
        android:id="@+id/textAgua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAcessibility="no"
        android:layout_marginTop="12dp"
        android:text="@string/agua"
        android:textColor="#0D47A1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/buttonAgua"
        app:layout_constraintStart_toStartOf="@id/buttonAgua"
        app:layout_constraintTop_toBottomOf="@id/buttonAgua" />

    <!-- CARRO DA SOPA -->

    <ImageButton
        android:id="@+id/buttonCarroSopa"
        android:layout_width="133dp"
        android:layout_height="92dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/botao_carro_da_sopa"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageButtonLogo"
        app:srcCompat="@drawable/sopa" />

    <TextView
        android:id="@+id/textCarroSopa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/carro_da_sopa"
        android:textColor="#0D47A1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/buttonCarroSopa"
        app:layout_constraintStart_toStartOf="@id/buttonCarroSopa"
        app:layout_constraintTop_toBottomOf="@id/buttonCarroSopa" />

    <!-- RECICLAGEM -->
    <ImageButton
        android:id="@+id/buttonReciclagem"
        android:layout_width="114dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/botao_reciclagem"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAgua"
        app:srcCompat="@drawable/reciclaguem" />

    <TextView
        android:id="@+id/textReciclagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/reciclagem"
        android:textColor="#0D47A1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/buttonReciclagem"
        app:layout_constraintStart_toStartOf="@id/buttonReciclagem"
        app:layout_constraintTop_toBottomOf="@id/buttonReciclagem" />

    <!-- CHAT -->
    <ImageButton
        android:id="@+id/buttonChat"
        android:layout_width="134dp"
        android:layout_height="83dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/botao_chat"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textCarroSopa"
        app:srcCompat="@drawable/chat" />

    <TextView
        android:id="@+id/textChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/chat"
        android:textColor="#0D47A1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/buttonChat"
        app:layout_constraintStart_toStartOf="@id/buttonChat"
        app:layout_constraintTop_toBottomOf="@id/buttonChat" />

    <!-- CAMINHADA/COLETA DE LIXO -->
    <ImageButton
        android:id="@+id/buttonCaminhadaLixo"
        android:layout_width="130dp"
        android:layout_height="101dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/botao_coleta_de_lixo"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textReciclagem"
        app:srcCompat="@drawable/caminhadolixo" />

    <!-- CASTRAÇÃO MÓVEL -->

    <!--perfiu-->

    <ImageButton
        android:id="@+id/buttonCastraMovel"
        android:layout_width="136dp"
        android:layout_height="101dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/botao_castramovel"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textChat"
        app:srcCompat="@drawable/castramovel" />

    <ImageButton
        android:id="@+id/buttonperfil"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:layout_marginStart="12dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/perfil"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/titulo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageButtonLogo"
        app:srcCompat="@drawable/perfiu"
        tools:layout_editor_absoluteY="4dp" />

    <TextView
        android:id="@+id/carrodolixo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/coleta_de_lixo"
        android:textColor="#0D47A1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonColetaLixo" />

    <TextView
        android:id="@+id/castramovel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:text="@string/castramovel"
        android:textColor="#0D47A1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCastraMovel" />

</androidx.constraintlayout.widget.ConstraintLayout>

